# miden-zed-extension

./: .gitignore  Cargo.toml  README.md  extension.toml
languages/masm/: config.toml
src/: lib.rs
